# bigworlds

./: Cargo.toml  DESIGN.md  README.md
cli/: Cargo.toml
cli/src/: cli.rs  client.rs  leader.rs  main.rs  node.rs  run.rs  server.rs  worker.rs
cli/src/interactive/: compl.rs  mod.rs  remote.rs
clients/messageio-client/: Cargo.toml
clients/messageio-client/src/: lib.rs
examples/: README.md
lib/: ARCHITECTURE.md  Cargo.toml  README.md
lib/examples/: behavior.rs  machine.rs  processor.rs  query.rs  repl.rs
lib/src/: address.rs  behavior.rs  error.rs  executor.rs  lib.rs  node.rs  processor.rs  query.rs  signal.rs  sim.rs  string.rs  util.rs  var.rs
lib/src/client/: async.rs  client_async.rs  client_sync.rs  mod.rs  sync.rs
lib/src/entity/: mod.rs  storage.rs
lib/src/leader/: manager.rs  mod.rs
lib/src/machine/: error.rs  exec.rs  mod.rs
lib/src/machine/cmd/: eval.rs  get_set.rs  goto.rs  invoke.rs  mod.rs  print.rs  query.rs  register.rs  set.rs  spawn.rs
lib/src/machine/cmd/flow/: _loop.rs  call.rs  component.rs  end.rs  forin.rs  ifelse.rs  machine.rs  procedure.rs  state.rs
lib/src/machine/script/: bridge.rs  mod.rs  parser.rs
lib/src/model/: deser.rs  intermediate.rs  mod.rs  module.rs  project.rs  scenario.rs
lib/src/net/: framed_tcp.rs  mod.rs  msg_io.rs  quic.rs  ws.rs
lib/src/part/: mod.rs  step.rs
lib/src/query/: process.rs
lib/src/rpc/: behavior.rs  leader.rs  machine.rs  machine_worker.rs  mod.rs  node.rs  server.rs  worker.rs
lib/src/rpc/msg/: client_server.rs  mod.rs
lib/src/server/: http.rs  mod.rs  turn.rs
lib/src/worker/: config.rs  manager.rs  mod.rs  part.rs
