[package]
name = "bigworlds"
version = "0.1.0"
authors = ["Adam Wierchoła <adam@wierchola.com>"]
edition = "2021"
repository = "https://github.com/adamsky/bigworlds"
description = "Distributed simulation engine for big dynamic worlds."
readme = "README.md"

# [lib]
# crate-type = ["lib", "cdylib"]

[features]
# zero-copy deserialization scheme
archive = ["rkyv"]

default = ["quic_transport", "json_encoding", "machine"]

http_server = ["axum"]

tcp_transport = []
zmq_transport = ["tmq"]
nng_transport = ["nng"]
ws_transport = ["tokio-tungstenite"]
quic_transport = ["quinn", "rcgen", "rustls"]

msgpack_encoding = ["rmp-serde"]
json_encoding = ["serde_json"]

machine = ["fasteval", "shlex", "smallvec", "annotate-snippets"] # enable runtime-level logic execution
machine_script = ["annotate-snippets"] # enable script processor
machine_dynlib = ["libloading"] # enable calls to dynamic libraries
machine_sysinfo = ["sysinfo"] # expose system information to preprocessor and runtime

machine_sandbox = ["machine", "machine_script"] # don't allow execution of user-provided code
machine_complete = ["machine", "machine_script", "machine_dynlib", "machine_sysinfo"]

small_stringid = [] # make the fixed-size string ids 23 chars long 
tiny_stringid = [] # make the fixed-size string ids 10 chars long 
big_nums = [] # use 64 bit integers and floating point numbers instead of default 32 bit

[dependencies]
serde = "1"
serde_repr = "0.1"
serde_bytes = "0.11"
bincode = "1.3.3"
rmp-serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.9" }
toml = { version = "0.5", features = ["preserve_order"] }
rkyv = { version = "0.7", optional = true, features = ["validation"] }
bytecheck = "0.6"

byteorder = "1"
bytes = "1"
num_enum = "0.5"
integer-encoding = "3"
lz4 = { version = "1", optional = true }

log = "0.4"
thiserror = "1"
itertools = "0.10"

id-pool = { version = "0.2.2", default-features = false, features = ["u32", "serde"] }
fnv = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
deepsize = "0.2.0"
strsim = "0.10"

tokio = { version = "1", features = ["sync", "macros", "io-util", "time", "rt", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
async-trait = "0.1"
futures = "0.3"

axum = { version = "0.6.1", optional = true }

tmq = { version = "0.3", optional = true }
nng = { version = "1", optional = true }
tokio-tungstenite = { version = "0.20", optional = true }

quinn = { version = "0.9", features = [], optional = true }
rcgen = { version = "0.10", optional = true }
rustls = { version = "0.20", features = ["quic", "dangerous_configuration"], optional = true }
rustls-native-certs = "0.6"

fasteval = { git = "https://github.com/adamsky/fasteval", branch = "serde", optional = true }
libloading = { version = "0.7", optional = true }
image = { version = "0.24", default-features = false, features = ["png"] }

annotate-snippets = { version = "0.9", features = ["color"], optional = true }
getopts = { version = "0.2" }
shlex = { version = "1", optional = true }
arrayvec = { version = "0.7", features = ["serde"] }
smallvec = { version = "1", features = ["serde"], optional = true }
sysinfo = { version = "0.26", optional = true }

enum-as-inner = "0.5"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
semver = "1"

tar = "0.4"
vfs = "0.9.0"

[dev-dependencies]
messageio-client = { path = "../clients/messageio-client" }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
criterion = "0.4"
simplelog = "0.12"
